--- a/public/assets/css/modules.css
+++ b/public/assets/css/modules.css
@@ -48,7 +48,7 @@ h2 {
 
     h2.alt {
         font-weight: 600;
-        color: #333;
+        color: #fff;
     }
 
         h2.alt strong {
@@ -593,11 +593,12 @@ padding-left: 0;
 
         #main > section.one {
             background-color: #81918E;
-            background-image: url("../../images/turtle-two-kona.JPG");
+            background-image: url("https://media.giphy.com/media/7i6IgJWjk67cBX7H2E/giphy.gif");
         }
 
         #main > section.one p {
-            color: #fff;
+            color: rgb(109, 121, 119);
+            font-weight: bolder;
         }
 
         #main > section.two {
@@ -745,7 +746,7 @@ padding-left: 0;
         }
 
         header br {
-            display: none;
+            display: block;
         }
 
         .container {
@@ -768,28 +769,28 @@ padding-left: 0;
     /* Header */
 
         #header {
-            -moz-backface-visibility: hidden;
-            -webkit-backface-visibility: hidden;
-            -ms-backface-visibility: hidden;
-            backface-visibility: hidden;
-            -moz-transform: translateX(-275px);
-            -webkit-transform: translateX(-275px);
-            -ms-transform: translateX(-275px);
-            transform: translateX(-275px);
+            -moz-backface-visibility: visible;
+            -webkit-backface-visibility: visible;
+            -ms-backface-visibility: visible;
+            backface-visibility: visible;
+            -moz-transform: translateX(0px);
+            -webkit-transform: translateX(0px);
+            -ms-transform: translateX(0px);
+            transform: translateX(0px);
             -moz-transition: -moz-transform 0.5s ease;
             -webkit-transition: -webkit-transform 0.5s ease;
             -ms-transition: -ms-transform 0.5s ease;
             transition: transform 0.5s ease;
             -webkit-overflow-scrolling: touch;
             display: block;
-            height: 100%;
+            height: 85px;
             left: 0;
-            overflow-y: auto;
+            overflow-x: auto;
             position: fixed;
             top: 0;
-            width: 275px;
+            width: 100%;
             z-index: 10002;
-            width: 275px;
+            width: 100%;
             background: #222729 url("images/overlay.png");
             box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
         }
@@ -814,65 +815,7 @@ padding-left: 0;
             padding: 0.5em 1.25em 0.5em 1.25em;
         }
 
-        #headerToggle {
-            -moz-backface-visibility: hidden;
-            -webkit-backface-visibility: hidden;
-            -ms-backface-visibility: hidden;
-            backface-visibility: hidden;
-            -moz-transition: -moz-transform 0.5s ease;
-            -webkit-transition: -webkit-transform 0.5s ease;
-            -ms-transition: -ms-transform 0.5s ease;
-            transition: transform 0.5s ease;
-            display: block;
-            height: 2.25em;
-            left: 0;
-            position: fixed;
-            top: 0;
-            width: 3.25em;
-            z-index: 10001;
-        }
-
-            #headerToggle .toggle {
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
-                outline: 0;
-                border: 0;
-            }
-
-                #headerToggle .toggle:before {
-                    font-family: FontAwesome;
-                    text-decoration: none;
-                    font-style: normal;
-                    font-weight: normal;
-                    -webkit-font-smoothing: antialiased;
-                    -moz-osx-font-smoothing: grayscale;
-                    content: '\f0c9';
-                    color: #fff;
-                    font-size: 18px;
-                    line-height: 2.25em;
-                    background: rgba(128, 136, 144, 0.5);
-                    border-radius: 0.35em;
-                    text-align: center;
-                    position: absolute;
-                    left: 0.5em;
-                    top: 0.5em;
-                    display: block;
-                    width: 3.25em;
-                    height: 2.25em;
-                    line-height: 2.25em;
-                }
-
         body.header-visible #main {
-            -moz-transform: translateX(275px);
-            -webkit-transform: translateX(275px);
-            -ms-transform: translateX(275px);
-            transform: translateX(275px);
-        }
-
-        body.header-visible #headerToggle {
             -moz-transform: translateX(275px);
             -webkit-transform: translateX(275px);
             -ms-transform: translateX(275px);
@@ -944,6 +887,34 @@ padding-left: 0;
             font-size: 1.25em;
         }
 
+    /* Header */
+        #header {
+            -moz-backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            -ms-backface-visibility: hidden;
+            backface-visibility: hidden;
+            -moz-transform: translateX(-275px);
+            -webkit-transform: translateX(-275px);
+            -ms-transform: translateX(-275px);
+            transform: translateX(-275px);
+            -moz-transition: -moz-transform 0.5s ease;
+            -webkit-transition: -webkit-transform 0.5s ease;
+            -ms-transition: -ms-transform 0.5s ease;
+            transition: transform 0.5s ease;
+            -webkit-overflow-scrolling: touch;
+            display: block;
+            height: 100%;
+            left: 0;
+            overflow-x: auto;
+            position: fixed;
+            top: 0;
+            width: 275px;
+            z-index: 10002;
+            width: 275px;
+            background: #222729 url("images/overlay.png");
+            box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.125);
+        }
+
     /* Main */
 
         #main > section {
@@ -972,4 +943,62 @@ padding-left: 0;
                 margin-top: 0;
             }
 
+            
+        #headerToggle {
+            -moz-backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
+            -ms-backface-visibility: hidden;
+            backface-visibility: hidden;
+            -moz-transition: -moz-transform 0.5s ease;
+            -webkit-transition: -webkit-transform 0.5s ease;
+            -ms-transition: -ms-transform 0.5s ease;
+            transition: transform 0.5s ease;
+            display: block;
+            height: 2.25em;
+            left: 0;
+            position: fixed;
+            top: 0;
+            width: 3.25em;
+            z-index: 10001;
+        }
+
+            #headerToggle .toggle {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                outline: 0;
+                border: 0;
+            }
+
+                #headerToggle .toggle:before {
+                    font-family: FontAwesome;
+                    text-decoration: none;
+                    font-style: normal;
+                    font-weight: normal;
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                    content: '\f0c9';
+                    color: #fff;
+                    font-size: 18px;
+                    line-height: 2.25em;
+                    background: rgba(128, 136, 144, 0.5);
+                    border-radius: 0.35em;
+                    text-align: center;
+                    position: absolute;
+                    left: 0.5em;
+                    top: 0.5em;
+                    display: block;
+                    width: 3.25em;
+                    height: 2.25em;
+                    line-height: 2.25em;
+                }
+
+                body.header-visible #headerToggle {
+                    -moz-transform: translateX(275px);
+                    -webkit-transform: translateX(275px);
+                    -ms-transform: translateX(275px);
+                    transform: translateX(275px);
+                }
 }
